# http-requests-sender

./: .gitignore  README.md  pyproject.toml
.github/workflows/: check.yml
csv_converter/: __init__.py  converter.py
csv_converter/scripts/: entry_point.py
curl_converter/: converter.py  curl.py  http.py
curl_converter/scripts/: entry_point.py
http_requests_sender/: __init__.py  cli.py  curl.py  curl_requests.py  http.py  http_requests.py  http_requests_sender.py
http_requests_sender/scripts/: entry_point.py
tests/: __init__.py  test_converter.py  test_http.py  test_http_requests_sender.py
tests/fixtures/: curl_requests.py  http_requests.py  input.txt  output.txt
