[tool.poetry]
name = "curl-converter"
version = "0.1.0"
description = ""
authors = ["RKV102 <roman.krilow@mail.ru>"]
readme = "README.md"


[tool.poetry.scripts]
curl-converter = "curl_converter.scripts.entry_point:main"


[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
coverage = "^7.4.4"
flake8 = "^7.0.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
